@@ -1,14 +1,19 @@
-# custom IntelliJ IDEA VM options
-
--Xms256M
--Xmx6G
+-Xms2G
+-Xmx4G
 -XX:ReservedCodeCacheSize=240m
 -XX:+UseG1GC
 -XX:SoftRefLRUPolicyMSPerMB=50
 -ea
--Dsun.io.useCanonCaches=false
+-server
+-XX:CICompilerCount=2
+-Dsun.io.useCanonPrefixCache=false
 -Djava.net.preferIPv4Stack=true
+-Djdk.http.auth.tunneling.disabledSchemes=""
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:-OmitStackTraceInFastThrow
+-Djdk.attach.allowAttachSelf=true
+-Dkotlinx.coroutines.debug=off
+-Djdk.module.illegalAccess.silent=true
 -Dawt.useSystemAAFontSettings=on
 -Dsun.java2d.renderer=sun.java2d.marlin.MarlinRenderingEngine
+-Dsun.tools.attach.tmp.only=true
